@@ -1,5 +1,8 @@
 About: A p5.js tropical cyclone simulation game
 
+v20190128a:
+    + Added WIP menu in-sim for accessing various settings and features in upcoming updates
+    * Saving/loading now checks save format number for compatibility
 v20190101a:
     * Saving/loading test now autosaves partial basin data such as hemisphere and start year
 v20181231a:
